[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scene/drag3d/drag3d_mix.gd" type="Script" id=1]
[ext_resource path="res://Image/gui_home.png" type="Texture" id=2]
[ext_resource path="res://Scene/drag3d/player_ichuen_full.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sound/bgm_drag3d_Tididis.mp3" type="AudioStream" id=4]
[ext_resource path="res://Scene/drag3d/player_speng_full.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scene/drag3d/player_mno_full.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scene/drag3d/player_olay_full.tscn" type="PackedScene" id=7]
[ext_resource path="res://Image/player_fullz-speng.png" type="Texture" id=8]
[ext_resource path="res://Image/player_fullz-ichuen.png" type="Texture" id=9]
[ext_resource path="res://Image/player_fullz-mno.png" type="Texture" id=10]
[ext_resource path="res://Image/player_fullz-olay.png" type="Texture" id=11]

[sub_resource type="ProceduralSky" id=1]
sky_top_color = Color( 0.490196, 0.384314, 0.784314, 1 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )

[node name="drag3d" type="Spatial"]
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 7 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]

[node name="player_ichuen_full" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )

[node name="player_mno_full" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, -2, 0 )

[node name="player_olay_full" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, -2, 0 )

[node name="player_speng_full" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, -2, 0 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="home_button" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = -72.0
margin_right = 147.0
margin_bottom = 62.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 2 )

[node name="player_full_hbox" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -455.0
margin_right = 446.0
margin_bottom = 559.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="ichuen_button" type="Button" parent="player_full_hbox"]
margin_right = 176.0
margin_bottom = 559.0
icon = ExtResource( 9 )
flat = true

[node name="mno_button" type="Button" parent="player_full_hbox"]
margin_left = 180.0
margin_right = 430.0
margin_bottom = 559.0
icon = ExtResource( 10 )
flat = true

[node name="olay_button" type="Button" parent="player_full_hbox"]
margin_left = 434.0
margin_right = 677.0
margin_bottom = 559.0
icon = ExtResource( 11 )
flat = true

[node name="speng_button" type="Button" parent="player_full_hbox"]
margin_left = 681.0
margin_right = 901.0
margin_bottom = 559.0
icon = ExtResource( 8 )
flat = true

[connection signal="body_entered" from="player_ichuen_full" to="." method="_on_player_ichuen_full_body_entered"]
[connection signal="input_event" from="player_ichuen_full" to="." method="_on_player_ichuen_full_input_event"]
[connection signal="body_exited" from="player_mno_full" to="." method="_on_player_mno_full_body_exited"]
[connection signal="input_event" from="player_mno_full" to="." method="_on_player_mno_full_input_event"]
[connection signal="body_exited" from="player_olay_full" to="." method="_on_player_olay_full_body_exited"]
[connection signal="input_event" from="player_olay_full" to="." method="_on_player_olay_full_input_event"]
[connection signal="body_exited" from="player_speng_full" to="." method="_on_player_speng_full_body_exited"]
[connection signal="input_event" from="player_speng_full" to="." method="_on_player_speng_full_input_event"]
[connection signal="pressed" from="home_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="player_full_hbox/ichuen_button" to="." method="_on_ichuen_button_pressed"]
[connection signal="pressed" from="player_full_hbox/mno_button" to="." method="_on_mno_button_pressed"]
[connection signal="pressed" from="player_full_hbox/olay_button" to="." method="_on_olay_button_pressed"]
[connection signal="pressed" from="player_full_hbox/speng_button" to="." method="_on_speng_button_pressed"]
